# formatonic

./: .gitignore  Cargo.toml  LICENSE
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_refactor.yaml  3_feat_request.yaml  config.yml
src/: lib.rs  main.rs
src/pseudopotential/: upf.rs
